projects section, footer spacing fixed

--- a/src/Components/Footer/_footer.scss
+++ b/src/Components/Footer/_footer.scss
@@ -3,7 +3,7 @@
     justify-content: flex-start;
     align-items: center;
     position: absolute;
-    height: 15%;
+    height: 15vh;
     width: 100%;
     bottom: 0;
     padding: 0 4%;
@@ -49,7 +49,7 @@
 
 //mobile
 @media all and (max-width: $mobile-screen) {
-    .footer-section {
+    .footer-projects-mobile {
         position: relative;
     }
 
