--- a/src/Components/Projects/_projects.scss
+++ b/src/Components/Projects/_projects.scss
@@ -67,7 +67,6 @@
 	opacity: 0;
 	display: block;
 	width: 100%;
-	height: 100%;
 }
 
 .project__title:hover+.back {
@@ -80,13 +79,31 @@
 		width: 100%;
 	}
 
-	.project__title:hover {
-		opacity: 1;
-
-	}
-
 	.projects-section {
 		flex-direction: column;
 		height: 95vh;
 	}
+
+	.project__title {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		transform: translateY(50%);
+	}
+
+	.project__title:hover {
+		opacity: 1;
+		display: flex;
+		justify-content: center;
+		transform: translateY(50%);
+	}
+
+	.back-hobby-games {
+		background-position: 5% 0;
+	}
+
+	.back {
+		opacity: 1;
+	}
+
 }
