--- a/src/Containers/Header/_Header.scss
+++ b/src/Containers/Header/_Header.scss
@@ -75,7 +75,8 @@
         flex-direction: column;
         background: #2c2d2d;
         position: relative;
-        height: 15%;
+        height: 18vh;
+        padding-bottom: 2%;
     }
 
     .header-title {
